# mechanism

./: .gitignore  README.md  package-lock.json  package.json  release.ps1  vite.config.ts
.github/workflows/: release.yml
sidecar/: amazon.js  classifier.js  db.js  imap.js  index.js  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  gen-icon.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  EmailList.tsx  EmailView.tsx  Sidebar.tsx
src/lib/: sidecar.ts
src/pages/: AmazonCheck.tsx  Inbox.tsx  PresetsPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts
~/.tauri/: mechanism.key  mechanism.key.pub
