[package]
name = "amazon-mail"
version = "0.1.0"
description = "Amazon Mail Client"
authors = ["you"]
edition = "2021"

[lib]
name = "amazon_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
